# nora

./: .dockerignore  .gitignore  .gitleaks.toml  .trivyignore  ADOPTERS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.astra  Dockerfile.redos  LICENSE  Makefile  README.md  RELEASE_RUNBOOK.md  ROADMAP.md  SECURITY.md  SESSION_NOTES.md  TODO.md  _typos.toml  clippy.toml  deny.toml  docker-compose.yml  install.sh  llms.txt  renovate.json  tarpaulin.toml
.claude/: settings.local.json
.clusterfuzzlite/: Dockerfile  project.yaml
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-reland.yml  benchmarks.yml  ci.yml  codeql.yml  kani.yml  release.yml  scorecard.yml
deploy/: Caddyfile  Dockerfile.release  README.md  demo-traffic.sh  docker-compose.prod.yml  docker-compose.yml  nora-demo-traffic.service  nora.service  traefik.yml
docs-ru/: ARCHITECTURE.md  README.md  admin-guide.md  technical-spec.md  user-guide.md
docs-site/: astro.config.mjs
docs-site/src/content/docs/configuration/: authentication.md  circuit-breaker.md  curation.md  docker-proxy.md  http-proxy.md  s3-storage.md  settings.md  tls.md
docs-site/src/content/docs/deployment/: upgrade-guide.md
docs-site/src/content/docs/observability/: audit-log.md  prometheus-metrics.md
docs-site/src/content/docs/registries/: ansible.md  cargo.md  conan.md  docker.md  go.md  maven.md  npm.md  nuget.md  pub.md  pypi.md  rubygems.md  terraform.md
docs-site/src/content/docs/ru/configuration/: authentication.md  settings.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_docker_manifest.rs  fuzz_url_leak.rs  fuzz_validation.rs
nora-cli/: Cargo.toml  nora-cli.cdx.json
nora-cli/src/: main.rs
nora-registry/: Cargo.toml
nora-registry/benches/: parsing.rs
nora-registry/src/: activity_log.rs  audit.rs  auth.rs  backup.rs  cache_ttl.rs  circuit_breaker.rs  config.rs  curation.rs  dashboard_metrics.rs  digest_quarantine.rs  docker_key_migration.rs  error.rs  gc.rs  hash_pin_store.rs  health.rs  lib.rs  main.rs  metrics.rs  migrate.rs  openapi.rs  rate_limit.rs  registry_type.rs  repo_index.rs  request_id.rs  retention.rs  signing.rs  test_helpers.rs  tokens.rs  validation.rs
nora-registry/src/auth/: mod.rs  namespace.rs  oidc.rs  token_routes.rs
nora-registry/src/config/: auth.rs  circuit_breaker.rs  curation.rs  gc.rs  mod.rs  rate_limit.rs  retention.rs  server.rs  signing_cfg.rs  storage.rs
nora-registry/src/config/registry/: ansible.rs  cargo.rs  conan.rs  deb.rs  docker.rs  gems.rs  go.rs  maven.rs  mod.rs  npm.rs  nuget.rs  pub_dart.rs  pypi.rs  raw.rs  rpm.rs  terraform.rs
nora-registry/src/import/: http.rs  layout.rs  mod.rs  permissions.rs  resume.rs  transfer.rs
nora-registry/src/import/source/: artifactory.rs  mod.rs  nexus.rs
nora-registry/src/mirror/: deb.rs  docker.rs  mod.rs  npm.rs  rpm.rs
nora-registry/src/registry/: ansible.rs  cargo_registry.rs  conan.rs  deb.rs  docker.rs  docker_auth.rs  gems.rs  go.rs  maven.rs  mod.rs  npm.rs  ns_isolation_metadata_tests.rs  nuget.rs  pub_dart.rs  pypi.rs  raw.rs  rpm.rs  terraform.rs
nora-registry/src/registry/snapshots/: nora__registry__npm__spec_conformance_tests__npm_regular_tarball_urls.snap  nora__registry__npm__spec_conformance_tests__npm_scoped_tarball_urls.snap  nora__registry__nuget__spec_conformance_tests__nuget_registration_paginated_page_ids.snap  nora__registry__nuget__spec_conformance_tests__nuget_service_index_ids.snap
nora-registry/src/secrets/: env.rs  mod.rs  protected.rs
nora-registry/src/storage/: local.rs  mod.rs  object.rs  s3.rs
nora-registry/src/ui/: api.rs  components.rs  i18n.rs  logo.rs  mod.rs  templates.rs
nora-registry/src/ui/static/: tailwind.css
nora-registry/testdata/npm/: package-metadata.json  scoped-package-metadata.json
nora-registry/testdata/nuget/: registration-index-inline.json  registration-index-paginated.json  service-index.json
nora-storage/: Cargo.toml  nora-storage.cdx.json
nora-storage/src/: config.rs  main.rs
scripts/: coherence-check.sh  diff-coverage.py  diff-registry.sh  playwright-ui-test.mjs  post-release-gate.sh  qa-panel.sh  rust-antipatterns.sh  test-diff-coverage.sh  verify-changelog.sh
tests/: smoke.sh  v09-features.sh
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e-full/registries/: nuget.sh
tests/e2e/tests/: dashboard.spec.ts  docker-proxy.spec.ts  npm-proxy.spec.ts  other-registries.spec.ts
tests/e2e/tests/contracts/: registry-contracts.ts
tests/nuget-client/: .gitignore  run-tests.sh
tests/nuget-client/02-FrameworkCompat/: 02-FrameworkCompat.csproj
tests/nuget-client/03-NativeRid/: 03-NativeRid.csproj
tests/nuget-client/04-Analyzers/: 04-Analyzers.csproj  Program.cs
tests/nuget-client/05-SourceGen/: 05-SourceGen.csproj  Program.cs
tests/nuget-client/06-SemVer2/: 06-SemVer2.csproj
tests/nuget-client/07-VersionRanges/: 07-VersionRanges.csproj
tests/nuget-client/08-CaseInsensitive/: 08-CaseInsensitive.csproj
tests/nuget-client/09-LockFile/: 09-LockFile.csproj
tests/nuget-client/10-DeepTransitive/: 10-DeepTransitive.csproj
tests/s3-backends/: docker-compose.yml  garage-init.sh  test.sh
